--- a/app.yaml
+++ b/app.yaml
@@ -7,6 +7,8 @@ threadsafe: true
 handlers:
 - url: /static
   static_dir: static
+- url: /api/.*
+  script: api.app
 - url: /.*
   script: app.app
 
