Working admin app and a cron job to try and isolate errors if the text clipped exceeds the memcache limit

--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 application: gu-text-catcher
-version: 7
+version: 8
 runtime: python27
 api_version: 1
 threadsafe: true
@@ -9,9 +9,18 @@ handlers:
   static_dir: static
 - url: /api/.*
   script: api.app
+- url: /admin/.*
+  script: admin.app
+  login: admin
+- url: /tasks/.*
+  script: tasks.app
+  login: admin
 - url: /.*
   script: app.app
 
 libraries:
 - name: jinja2
   version: latest
+
+builtins:
+- remote_api: on
